--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,9 @@ edition = "2024"
 [dependencies]
 jsonwebtoken = "9.3.1"
 serde = {version = "1.0.219", features = ["derive"]}
-serde_json = "1.0"
+# serde_json = "1.0"
 
+[dev-dependencies]
+rsa = { version = "0.9.8"}
+base64 = "0.22"
+rand = "0.9.0"
