--- a/pallet-jwt/Cargo.toml
+++ b/pallet-jwt/Cargo.toml
@@ -11,3 +11,17 @@ log.workspace = true
 scale-info.workspace = true
 traits-authn.workspace = true
 frame-support.workspace = true
+frame = { workspace = true, default-features = false }
+codec.workspace = true
+
+[package.metadata.docs.rs]
+targets = ["x86_64-unknown-linux-gnu"]
+
+[dev-dependencies]
+sp-core = { workspace = true }
+
+[features]
+default = ["std"]
+std = ["codec/std", "frame/std", "scale-info/std"]
+runtime-benchmarks = ["frame/runtime-benchmarks"]
+try-runtime = ["frame/try-runtime"]
