--- a/pallet-jwt/Cargo.toml
+++ b/pallet-jwt/Cargo.toml
@@ -7,12 +7,16 @@ license.workspace = true
 repository.workspace = true
 
 [dependencies]
-log.workspace = true
-scale-info.workspace = true
-traits-authn.workspace = true
-frame-support.workspace = true
-frame = { workspace = true, default-features = false }
 codec.workspace = true
+scale-info.workspace = true
+frame-benchmarking.workspace = true
+frame-support.workspace = true
+frame-system.workspace = true
+frame.workspace = true
+pallet-balances.workspace = true
+sp-io.workspace = true
+sp-runtime.workspace = true
+log.workspace = true
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
