Improved storage, pending minimal changes and include the offchain logic

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ pallet-balances = { version = "41.1.0" }
 sp-io = { version = "40.0.0" }
 sp-runtime = { version = "41.1.0" }
 sp-core = { version = "36.1.0" }
+sp-std = { version = "14.0.0" }
 
 # FRAME Contrib
 traits-authn = { git = "https://github.com/virto-network/frame-contrib", package = "fc-traits-authn", default-features = false }
