--- a/pallet-jwt/Cargo.toml
+++ b/pallet-jwt/Cargo.toml
@@ -17,6 +17,7 @@ pallet-balances.workspace = true
 sp-io.workspace = true
 sp-runtime.workspace = true
 log.workspace = true
+sp-std.workspace = true
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
