--- a/pallet-jwt/Cargo.toml
+++ b/pallet-jwt/Cargo.toml
@@ -18,6 +18,7 @@ sp-io.workspace = true
 sp-runtime.workspace = true
 log.workspace = true
 sp-std.workspace = true
+serde_json.workspace = true
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
