--- a/pallet-jwt/Cargo.toml
+++ b/pallet-jwt/Cargo.toml
@@ -19,6 +19,7 @@ sp-runtime.workspace = true
 log.workspace = true
 sp-std.workspace = true
 serde_json.workspace = true
+pallet-session.workspace = true
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
